@@ -3,7 +3,7 @@ unam sh4
 qemu sh4
 ctrg sh4
 comp gcc
-kern sh7785lcr
+kern sh7751r
 grub ieee1275-bin
 boot sh4-ieee1275
 uefi bootsh4.efi
